# influxdb

LogFPS/: CMakeLists.txt  compile.sh  run.sh
LogFPS/src/: FpsUploader.cpp  FpsUploader.h  FpsUploaderConfig.h  LogFPS.cpp  main.cpp
curl/: buckets.sh  config-aic.sh  config-nubtse.sh  create-bucket.sh  get-response-from-curl.sh  keep-sending-random-fps-remote.sh  schema.txt  signin.sh  test.sh  write-airSensors.sh  write-fps-dynamic.sh  write-fps-remote.sh  write-fps.sh
env/: Dockerfile  build.sh  run-docker.sh
